--- a/bodhi.jade
+++ b/bodhi.jade
@@ -44,6 +44,19 @@ html(lang="en")
 
 					p I got a sense that developers were not too keen on using the web interface and testers had a hard time navigating the web interface. This was especially true when new testers were introduced to the web UI. The challenge was to increase the Web UI engagement amongst the community.
 
+					h2 Existing system
+
+	.container-fluid
+		.row
+			.col-md-6
+				+clickable_responsive_image("img/w_bodhi/before.png")
+			.col-md-6
+				+clickable_responsive_image("img/w_bodhi/oldflow2.png")
+
+	.container
+		.row
+			article.nobottompadding
+				section
 					h2(id="research") User research
 
 					p As I sat down to ponder more on the problems being faced by the users, I divided them into 3 main categories for my redesign project.
@@ -91,23 +104,20 @@ html(lang="en")
 					tr
 						td.r1
 							h3.h3tufte
-								strong Must have
+								strong Critical
 						td
 							ol.ptufte
-								li No download link for the koji (The user was describing it as a drop down menu in case of multiple downloads) and command line download link as well
-								li Karma cycle is very confusing as he could not figure out the functionality of the untested button.
+								li A download link for the koji and CMD download link as well
+								li Karma cycle is very confusing; could not figure out the functionality of the untested button.
 								li No direct contact link to the submitter.
-								li Updates to the bugzilla.
+								li Show bugs related to an update
 						td.r1
 							ol.ptufte
-								li Some ideas about the "New override" It will be interesting to be able to submit more than 1 package at a time as we can for "new update".
-								li There is a need to have a check-box for being able to "push to stable" various package in a single action
-								li It could also be nice to be able to change the content like "number of lines" in list or the "time in testing"
+								
 						td.r1
 							ol.ptufte
 								li Website navigation is very confusing
 								li They often get confused about the types of packages available for testing
-								li Further, I figured that developers actually had little idea about the Bodhi update system and often never used the web ui interface. I had to refocus the entire redesign on testers as our major target audience. They were the ones frequently using the update system daily and had problems navigating the page
 					tr.r1
 						td.r1
 							h3.h3tufte 
@@ -118,10 +128,10 @@ html(lang="en")
 								li Edit the replies to the thread.
 						td.r1
 							ol.ptufte
-								li The content under these tabs can be changed as follows :
-								li The "status" can have some more refined content which can be filtered according to "status since"
-								li Similarly "testing" can be filtered according to "testing for 7 days" or "Stable for 2 months"
-								li This would allow the user to have more accurate information about the current state of the process
+								li To be able to submit more than 1 package at a time as we can for "new update".
+								li Ability to mark an update as stable in single action
+								li Ability to edit information regarding an Update. e.g. Number of lines or Time in testing			
+								li To have more accurate information about the current state of the process, the "status" can have some more refined content which can be filtered according to "status since" and "testing" can be filtered according to "testing for 7 days" or "Stable for 2 months"
 						td.r1
 							p &nbsp;
 
@@ -130,6 +140,9 @@ html(lang="en")
 			.column-md-12
 				article.nobottompadding
 					section
+					
+						p Overall, I figured that developers actually had little idea about the Bodhi update system and often never used the web ui interface. I had to refocus the entire redesign on testers as our major target audience. They were the ones frequently using the update system daily and had problems navigating the page
+
 
 						h3 Don't forget the heuristic evaluation!
 						p Even after collecting all that data from user interviews, there were certain pages for which I did not have enough information. So, I conducted a heuristics evaluation of the website to see what all other problems that website might have and zeroed on the following problems in the UI. 
@@ -152,16 +165,19 @@ html(lang="en")
 
 						h2(id="brainstorming") Personas
 
-						p Equipped with the data collected from user research and heuristic evaluation, I conducted personas to help me guide the design stage.
+						p Equipped with the data collected from user research and heuristic evaluation, I created personas to help me guide the design stage.
 
 						h3 Micah
+						img(src="img/w_bodhi/p3.png")
 						p Micah is a red hat tester who has been working on packages and giving karma through the update system. His typical day involved meeting with the developers about the packages and often updating the status of these packages in Bodhi. In between he attends the stand up meeting about his work in progress and finishes up the technical documentation required for the package.
 
 						h3 Nancy
-						p Nancy has been with redhat for many years and often enjoyed working on fedora release cycle code. She is a passionate about open source software and has been contributing to various open source projects online. Her typical day at red hat includes (kunjoos fill in here , I don’t know what a coder day looks like)
+						img(src="img/w_bodhi/p2.png")
+						p Nancy has been with redhat for many years and often enjoyed working on fedora release cycle code. She is a passionate about open source software and has been contributing to various open source projects online. Her typical day at red hat includes a daily standup in the morning, followed by some work on her project and then some meetings in the afternoon with stakeholders, designers or testers.
 
 						h3 James
-						p James is currently a senior at the University of Boston majoring in computer science. He wants to contribute to the open source community and is often seen checking out the open source projects to contribute. He wants to prepare for his interviews so feels contributing to real projects would help him understand the fundamentals better. He just read about the bodhi project and starts checking the web ui for packages to test.
+						img(src="img/w_bodhi/p1.png")
+						p James is currently a senior at the University of Boston majoring in computer science. He wants to contribute to the open source community and is often seen checking out the open source projects to contribute. He wants to prepare for his interviews so feels contributing to real projects would help him understand the fundamentals better. He just read about the bodhi project and starts checking the web UI for packages to test.
 
 						h2 Brainstorming multiple solutions
 
@@ -169,10 +185,14 @@ html(lang="en")
 
 	.container-fluid
 		.row
-			.col-md-6
-				+card_no_title("img/w_bodhi/s1.jpg")
-			.col-md-6
-				+card_no_title("img/w_bodhi/s2.jpg")
+			.col-md-4
+				+card_no_title1("img/w_bodhi/s1.jpg")
+			.col-md-4
+				+card_no_title1("img/w_bodhi/s2.jpg")
+			.col-md-2
+				+card_no_title1("img/w_bodhi/n1.png")
+			.col-md-2
+				+card_no_title1("img/w_bodhi/n2.png")
 
 	.container
 		.row
@@ -192,29 +212,6 @@ html(lang="en")
 		.row
 			.col-md-12.center-block(style="float:none;")
 				+card_no_title("img/w_bodhi/ctotal.png","margin:0 auto;")
-
-	//-
-		.container-fluid
-			style.
-				.c1 {
-					padding: 1rem;
-				}
-			.row
-				.col-md-4.c1
-					.row.c1(style="padding-bottom: 7rem;")
-						+card_no_title1("img/w_bodhi/c1.png")
-					.row.c1
-						+card_no_title1("img/w_bodhi/c2.png")
-				.col-md-4.c1
-					.row.c1(style="padding-bottom: 13rem;")
-						+card_no_title1("img/w_bodhi/c6.png")
-					.row.c1
-						+card_no_title1("img/w_bodhi/c5.png")
-				.col-md-4.c1
-					.row.c1
-						+card_no_title1("img/w_bodhi/c3.png")
-					.row.c1
-						+card_no_title1("img/w_bodhi/c4.png")
 
 	.container
 		.row
@@ -238,13 +235,163 @@ html(lang="en")
 			.col-md-12
 				article.nobottompadding
 					section
+						h3 Information architecture &mdash; closed card sorting
+
+						p To decide the IA of the website, I constructed page elements (nouns) out of the features I was going to include in the re-designing application and invited participants to conduct a closed card sorting session. Participants were encouraged to place these nouns under the 3 categories of Update, Home and Statistics
+						
+						p Table below, shows the old and new IA of the website. The "Before" row explains the IA of the existing system. The "After" row is based on the results of the closed card sorting exercise.
+						
+						p Nouns are color-coded to indicate what kind of change I introduced to the IA of the website.
+					
+	.container-fluid
+		style.
+			.sl {
+				margin:2rem;
+				// padding:1rem;
+				font-size: 1rem;
+				line-height: 2;
+			}
+			.sl2 {
+				margin-right:1rem;
+			}	
+		.row(style="padding-bottom: 1em;")
+			.col-md-12
+				span.label.label-default.sl.sl2 Kept as is
+				span.label.label-warning.sl.sl2 Moved
+				span.label.label-danger.sl.sl2 Removed
+				span.label.label-info.sl.sl2 Improved from
+				span.label.label-primary.sl.sl2 Improved to
+				span.label.label-success.sl.sl2 Added
+							
+		.row
+			.col-md-12.center-block(style="float:none;")
+				table.table-bordered.table-striped(style="margin: 0 auto;")
+					style.
+						.th1 {						
+							margin: 1em 1em;
+						}
+					thead
+						tr
+							th
+								h3.h3tufte.th1
+									strong &nbsp;
+							th 
+								h3.h3tufte.th1
+									strong Home
+							th
+								h3.h3tufte.th1
+									strong Update
+							th
+								h3.h3tufte.th1
+									strong Masher updates
+							th
+								h3.h3tufte.th1
+									strong Statistics									
+					tbody
+						tr
+							td
+								h3.h3tufte.th1
+									strong Before
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-warning.sl Top 5 testers
+											td
+												span.label.label-danger.sl Update system stream
+										tr
+											td
+												span.label.label-default.sl Critcal path updates
+											td
+												span.label.label-default.sl Security updates
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-default.sl Update Overview
+											td
+												span.label.label-danger.sl Automated test results
+										tr
+											td
+												span.label.label-info.sl Related bugs w/o comments
+											td
+												span.label.label-info.sl Flat comments
+										tr
+											td
+												span.label.label-info.sl Feedback
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-danger.sl Masher updates
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-info.sl Update distribution per release
+								
+						tr
+							td
+								h3.h3tufte.th1
+									strong After
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-success.sl Hierarchical update info
+											td
+												span.label.label-success.sl Update statistics at each hierarchy level
+										tr
+											td
+												span.label.label-default.sl Critcal path updates
+											td
+												span.label.label-default.sl Security updates
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-default.sl Update Overview
+											td
+												span.label.label-success.sl Builds included in update
+										tr
+											td
+												span.label.label-primary.sl Related bugs with comments
+											td
+												span.label.label-primary.sl Nested comments
+										tr
+											td
+												span.label.label-primary.sl update rating
+							td
+								x
+							td
+								table
+									tbody
+										tr
+											td
+												span.label.label-warning.sl Top 5 testers
+
+
+	.container
+		.row
+			.col-md-12
+				article.nobottompadding
+					section
+						h3 Interaction map						
+								
+	.container
+		.row
+			.col-md-12
+				article.nobottompadding
+					section
 						h2(id="design") Final design
 
 						p Based on the positive feedback from the survey and from my mentor on the design proposals presented as low-fi designs, I went forward and made the hi-fidelity designs for the same. Redhat had recently come up with a new style guide called <a href="http://www.patternfly.org">Patternfly</a> for enterprise applications. Since I was re-designing Bodhi from the ground up I decided to use this new style guide. Since, CSS files were already available for patternfly, it turned out to be easier to build the hi-fidelity prototype by just coding it using the <a href="https://github.com/patternfly/patternfly">Patternfly library</a>
-
-						h3 Information architecture
-
-						p For the design of the website, I grouped some of the webpage elements into the headers given below. I basically grouped them into Home page, Updates page and Statistics page
 
 	.container-fluid
 		.row(style="padding-bottom:3rem;")
@@ -273,15 +420,12 @@ html(lang="en")
 					strong Update details
 				p.ptufte This page will show the package details, Bugzilla updates, Download widget, comments and Karma
 
+
 	.container
 		.row
 			.col-md-12
 				article.nobottompadding
 					section
-						h3 Interaction map
-
-						h3 Task flows
-
 						h2(id="takeaway") What I learned from this experience
 						
 						p I felt that employees suffer more because most enterprise applications do not provide engaging user experience. This is because of the fact that most of the decisions taken by the software managers are primarily concerned with stability, security and scalability and not usability. Thus, it is not an easy goal to achieve and more often than not there are lot of that a lot of esoteric constraints when designing an enterprise application. So,sometimes it becomes very hard  to resist becoming a pushover designer. However, that itself can be taken as a good challenge.
