--- a/index.jade
+++ b/index.jade
@@ -71,6 +71,20 @@ html(lang="end")
                 "instapark.html", 
                 "img/instabanner.png"
             )
+			
+            +project_row(
+                "fa-linux", 
+                "Bodhi at Redhat Inc.", 
+                "Redesigning Fedora OS update management portal", 
+                [
+                    "Existing OS update management portal had several usability issues which primarily led to low productivity amongst developers and testers and difficulty in onboaarding of new open-source contributors. As an intern, I led the redesign and delivered prototypes for newer version"
+                ], 
+                "research, redesign, prototype, evaluate", 
+                "Jul'16 - Aug'16", 
+                "bodhi.html", 
+                "img/bodhi1.png"
+            )
+			
 
             +project_row(
                 "fa-gamepad", 
